--- a/public/assets/css/card.css
+++ b/public/assets/css/card.css
@@ -1,8 +1,10 @@
 .modal-content img{
     object-fit: cover;
-    height: 80vh;
+    /*height: 80vh;*/
 }
 .modal-content{
     width: 60vw;
     background-color: #141011;
+    height: 80vh;
+
 }
