--- a/templates/homepage/not_found.html.twig
+++ b/templates/homepage/not_found.html.twig
@@ -14,6 +14,6 @@
     {% endblock %}
 {% block body %}
     <div class="container mt-5 ">
-        <p>Aucune carte ne correspond à ""</p>
+        <p>Aucune carte ne correspond</p>
     </div>
 {% endblock %}
