--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <link href="/assets/css/card.css" rel="stylesheet">
+        <link href="/assets/css/home.css" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -16,13 +16,24 @@
         </button>
         <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Blibiothèque</a>
+                <a class="nav-item nav-link" href="{{ path('card_index')}}">Blibiothèque</a>
                 <a class="nav-item nav-link" href="#"><i class="fas fa-star text-warning"></i> Favoris</a>
-                <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i></i> Decks</a>
+                <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Decks</a>
             </div>
             {% block navbar %}{% endblock %}
         </div>
     </nav>
+    <header>
+        {% for label, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }} text-center msg-flash">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+    </header>
+
+
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
