--- a/templates/homepage/search.html.twig
+++ b/templates/homepage/search.html.twig
@@ -17,7 +17,8 @@
         <p>Il y a <strong>{{ total }}</strong> cartes contenant le votre recherche "{{ search }}"</p>
         {% for card in cardsPages %}
             {% if card.image_uris.png is defined %}
-            <a href="#" data-target="#card{{ card.id }}" data-toggle="modal" class="color-gray-darker td-hover-none">
+
+        <a href="#" data-target="#card{{ card.id }}" data-toggle="modal" class="color-gray-darker td-hover-none">
                 <img class="ml-1 mb-1 mr-1 mt-1 .cardSmall" alt="{{ card.name }}" src="{{ card.image_uris.png }}">
             </a>
             <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="card{{ card.id }}" role="dialog"
@@ -34,9 +35,9 @@
                             <button class="btn btn-outline-secondary btn-rounded btn-md ml-4 text-center"
                                     data-dismiss="modal" type="button">Ajouter aux favoris
                             </button>
-                            <button class="btn btn-outline-warning btn-rounded btn-md ml-4 text-center"
-                                    data-dismiss="modal" type="button">Ajouter à la bibliothèque
-                            </button>
+                            <a href="{{ path('add_card', {'idCard':card.id, 'search':search, 'next':next}) }}">
+                                <i class="far fa-plus-square text-info"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -45,10 +46,12 @@
 
         {% endfor %}
         <div class="d-flex justify-content-center mt-5 nav-pagination ">
-                {{ knp_pagination_render(cardsPages) }}
+            {{ knp_pagination_render(cardsPages) }}
         </div>
+        {% if total > 175 and cardsPages.getCurrentPageNumber==9 %}
     <div class="d-flex justify-content-center mt-5 nav-pagination ">
         <a href="{{ path('searchpage', {'search': search}) ~ '/' ~ (next+1)}}">Plus de résultats</a>
     </div>
+        {% endif %}
     </div>
 {% endblock %}
