--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,6 +19,8 @@
                 <a class="nav-item nav-link" href="{{ path('card_index')}}">Blibiothèque</a>
                 <a class="nav-item nav-link" href="#"><i class="fas fa-star text-warning"></i> Favoris</a>
                 <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Decks</a>
+                {% block home %}{% endblock %}
+
             </div>
             {% block navbar %}{% endblock %}
         </div>
