--- a/templates/card/index.html.twig
+++ b/templates/card/index.html.twig
@@ -1,16 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Card index{% endblock %}
-
+    {% block home %}
+        <a class="nav-item nav-link" href="{{ path('homepage')}}">Recherche</a>
+    {% endblock %}
 {% block body %}
-    <h1>Card index</h1>
 
 <div class="container mt-5 ">
-
+    <div class="row">
+    <h1 class="col-6">Ma Bibliothèque</h1>
+    <h2 class="col-6 text-right">{{ cards|length }} cartes</h2>
+    </div>
         {% for card in cards %}
                     <a href="{{ path('card_show', {'id': card.id}) }}"><img src="{{ card.image_uris.png }}"/></a>
         {% else %}
-                <p>no records found</p>
+                <p>Aucune carte à afficher</p>
         {% endfor %}
 
 </div>
