--- a/templates/homepage/search.html.twig
+++ b/templates/homepage/search.html.twig
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp"/>
 {% endblock %}
     {% block navbar %}
-        <form class="form-inline my-2 my-lg-0 justify-content-right"">
+        <form class="form-inline my-2 my-lg-0 justify-content-right">
             <input class="form-control mr-sm-2 text-light navsearch" type="search" placeholder="Rechercher"
                    aria-label="Search" name="search">
             <button class="btn btn-dark my-2 my-sm-0 text-light" type="submit">Rechercher</button>
