--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,45 +3,46 @@
 
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <form class="form-horizontal" role="form" method="POST">
-                            {% if error %}
-                                <div class="alert alert-danger">
-                                    {{ error.messageKey|trans(error.messageData) }}
-                                </div>
-                            {% endif %}
-
-                            <div class="form-group">
-                                <label for="email" class="col-md-4 control-label">E-Mail</label>
-
-                                <div class="col-md-6">
-                                    <input id="email" type="email" class="form-control" name="_email" value="{{ last_username }}">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="password" class="col-md-4 control-label">Mot de passe</label>
-
-                                <div class="col-md-6">
-                                    <input id="password" type="password" class="form-control" name="_password">
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-6 col-md-offset-4">
-                                    <button type="submit" class="btn btn-primary">
-                                        <i class="fa fa-btn fa-sign-in"></i> Se connecter
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+    <body>
+    <div class="container-fluid">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+        <div class="row pt-5">
+            <div class="col-12">
+                <p class="fa-1x text-primary text-center"><strong>Je suis déjà inscrit, je me connecte : </strong></p>
             </div>
         </div>
     </div>
+    <div class="container">
+        <form method="POST">
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-4">
+                    <label for="inputEmail">Email</label>
+                </div>
+                <div class="col-12 col-sm-4">
+                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-4 mt-2">
+                    <label for="inputPassword">Mot de passe</label>
+                </div>
+                <div class="col-12 col-sm-4 mt-2">
+                    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+                </div>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                <div class="col-5 col-sm-6 offset-sm-3 col-lg-6 offset-lg-4">
+                    <button class="btn btn-primary mt-3 mb-3 connexion">{{ button_label|default('Connexion') }}</button>
+                </div>
+            </div>
+        </form>
+        <div class="row justify-content-center pt-5">
+            <div class="col-11 col-md-12">
+                <a href="{{ path('app_register') }}"><p class="fa-1x text-primary text-center"><strong>Je suis nouveau, je m'inscris ! </strong></p></a>
+            </div>
+        </div>
+    </div>
+    </body>
+
 {% endblock %}
