ajout carte à un inventaire

--- a/templates/homepage/advanced_search.html.twig
+++ b/templates/homepage/advanced_search.html.twig
@@ -5,8 +5,7 @@
     <link href="/assets/css/advance.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=MedievalSharp"/>
 {% endblock %}
-    {% block navbar %}
-    {% endblock %}
+    {% block navbar %}{% endblock %}
 {% block body %}
     <div class="container">
         <h1>Recherche Avancée</h1>
