--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,25 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-    {% if app.user is defined %}
-        {{ include('_navbar.html.twig') }}
+    {% if app.user.roles is defined %}
+        <nav class="navbar navbar-expand-lg navbar-dark ">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="{{ path('card_index')}}">Bibliothèque</a>
+                    <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Decks</a>
+                </div>
+                {% if 'ROLE_ADMIN' in app.user.roles %}
+                    <a class="nav-item nav-link" href="{{ path('easyadmin')}}"><i class="fas fa-boxes"></i> Admin</a>
+                {% else %}
+                    <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Profil</a>
+                {% endif %}
+                {% block search %}{% endblock %}
+            </div>
+        </nav>
     {% endif %}
     <header>
         {% for label, messages in app.flashes %}
