--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,8 +12,9 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-    {% if app.user.roles is defined %}
         <nav class="navbar navbar-expand-lg navbar-dark ">
+            {% if app.user.roles is defined %}
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,14 +25,19 @@
                     <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Decks</a>
                 </div>
                 {% if 'ROLE_ADMIN' in app.user.roles %}
-                    <a class="nav-item nav-link" href="{{ path('easyadmin')}}"><i class="fas fa-boxes"></i> Admin</a>
+                    <a class="nav-item nav-link" href="{{ path('easyadmin')}}"><i class="fas fa-user-tie"></i> Admin</a>
                 {% else %}
-                    <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Profil</a>
+                    <a class="nav-item nav-link" href="#"><i class="fas fa-user-circle"></i> Profil</a>
                 {% endif %}
-                {% block search %}{% endblock %}
+                <a class="nav-item nav-link" href="/logout"><i class="fas fa-lock"></i></a>
             </div>
+                {% else %}
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <a class="nav-item nav-link" href="/login"><i class="fas fa-user-circle"></i></a>
+            </div>
+            {% endif %}
+            {% block search %}{% endblock %}
         </nav>
-    {% endif %}
     <header>
         {% for label, messages in app.flashes %}
             {% for message in messages %}
