--- a/templates/homepage/search.html.twig
+++ b/templates/homepage/search.html.twig
@@ -13,30 +13,28 @@
         {% for card in cardsPages %}
             {% if card.image_uris.png is defined %}
 
-        <a href="#" data-target="#card{{ card.id }}" data-toggle="modal" class="color-gray-darker td-hover-none">
-                <img class="ml-1 mb-1 mr-1 mt-1 .cardSmall" alt="{{ card.name }}" src="{{ card.image_uris.png }}">
-            </a>
-            <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="card{{ card.id }}" role="dialog"
-                 tabindex="-1">
-                <div class="modal-dialog modal-lg" role="document">
-                    <div class="modal-content">
-                        <div class="modal-body mb-0 p-0 modalImg">
-                            <img class="img" src="{{ card.image_uris.png }}" alt="{{ card.name }}">
-                        </div>
-                        <div class="modal-footer mb-0 p-0">
-                            <button class="btn btn-outline-primary btn-rounded btn-md ml-4 text-center"
-                                    data-dismiss="modal" type="button">Fermer
-                            </button>
-                            <button class="btn btn-outline-secondary btn-rounded btn-md ml-4 text-center"
-                                    data-dismiss="modal" type="button">Ajouter aux favoris
-                            </button>
-                            <a href="{{ path('add_card', {'idCard':card.id, 'search':search, 'next':next}) }}">
-                                <i class="far fa-plus-square text-info"></i>
-                            </a>
+                <a href="#" data-target="#card{{ card.id }}" data-toggle="modal"
+                   class="color-gray-darker td-hover-none">
+                    <img class="ml-1 mb-1 mr-1 mt-1 .cardSmall" alt="{{ card.name }}" src="{{ card.image_uris.png }}">
+                </a>
+                <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="card{{ card.id }}"
+                     role="dialog"
+                     tabindex="-1">
+                    <div class="modal-dialog modal-lg" role="document">
+                        <div class="modal-content">
+                                <button class="btn btn-outline-link btn-rounded btn-md ml-4 text-right"
+                                        data-dismiss="modal" type="button"><i class="far fa-times-circle fa-2x text-info"></i>
+                                </button>
+                                <img class="img" src="{{ card.image_uris.png }}" alt="{{ card.name }}">
+                                {% if app.user.roles is defined %}
+                                    <a href="{{ path('add_card', {'idCard':card.id, 'search':search, 'next':next}) }}">
+                                        <i class="fas fa-plus-circle fa-2x text-info"></i>
+                                    </a>
+                                {% endif %}
+
                         </div>
                     </div>
                 </div>
-            </div>
             {% endif %}
 
         {% endfor %}
@@ -44,9 +42,9 @@
             {{ knp_pagination_render(cardsPages) }}
         </div>
         {% if total > 175 and cardsPages.getCurrentPageNumber==9 %}
-    <div class="d-flex justify-content-center mt-5 nav-pagination ">
-        <a href="{{ path('searchpage', {'search': search}) ~ '/' ~ (next+1)}}">Plus de résultats</a>
-    </div>
+            <div class="d-flex justify-content-center mt-5 nav-pagination ">
+                <a href="{{ path('searchpage', {'search': search}) ~ '/' ~ (next+1) }}">Plus de résultats</a>
+            </div>
         {% endif %}
     </div>
 {% endblock %}
