--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,48 +1,44 @@
 {% extends 'base.html.twig' %}
 
-
+{% block stylesheets %}
+    <link href="/assets/css/login.css" rel="stylesheet">
+{% endblock %}
 
 {% block body %}
     <body>
-    <div class="container-fluid">
-        {% if error %}
-            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-        {% endif %}
-        <div class="row pt-5">
-            <div class="col-12">
-                <p class="fa-1x text-primary text-center"><strong>Je suis déjà inscrit, je me connecte : </strong></p>
+
+    {% if error %}
+        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+    <div class="wrapper fadeInDown zero-raduis">
+        <div id="formContent">
+
+            <div class="fadeIn first">
+                <h2 class="my-5 text-secondary">Connection</h2>
             </div>
-        </div>
-    </div>
-    <div class="container">
-        <form method="POST">
-            <div class="row justify-content-center">
-                <div class="col-12 col-sm-4">
-                    <label for="inputEmail">Email</label>
-                </div>
-                <div class="col-12 col-sm-4">
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-sm-4 mt-2">
-                    <label for="inputPassword">Mot de passe</label>
-                </div>
-                <div class="col-12 col-sm-4 mt-2">
-                    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
-                </div>
+
+            <form method="POST">
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail"
+                       class="form-control fadeIn second zero-raduis" placeholder="Email" required>
+                <input type="password" id="inputPassword" class="fadeIn third zero-raduis form-control" name="password"
+                       placeholder="Mot de passe" required>
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                <div class="col-5 col-sm-6 offset-sm-3 col-lg-6 offset-lg-4">
-                    <button class="btn btn-primary mt-3 mb-3 connexion">{{ button_label|default('Connexion') }}</button>
+                <div>
+
+                    <button class="btn btn-secondary mt-3 mb-3 connexion fadeIn fourth zero-raduis">{{ button_label|default('Connexion') }}</button>
                 </div>
-            </div>
-        </form>
-        <div class="row justify-content-center pt-5">
-            <div class="col-11 col-md-12">
-                <a href="{{ path('app_register') }}"><p class="fa-1x text-primary text-center"><strong>Je suis nouveau, je m'inscris ! </strong></p></a>
-            </div>
+                <div>
+                    <p class="text-secondary text-center"><strong>Je n'ai pas encore de compte : </strong></p>
+
+                    <a href="{{ path('app_register') }}">
+                        <button class="btn btn-secondary mt-3 mb-3 connexion fadeIn fourth zero-raduis">Inscription</button>
+                    </a>
+                </div>
+            </form>
+
+
         </div>
     </div>
     </body>
-
 {% endblock %}
+
