--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -6,7 +6,7 @@ body{
 img{
     max-height: 300px;
     object-fit: contain;
-    top: 20vh;
+    top: 25vh;
 }
 
 .img{
@@ -14,11 +14,11 @@ img{
 }
 
 form{
-    top: 20vh;
+    top: 25vh;
 }
 
 .form-inline .form-control{
-    background-color: #343a40;
+    background-color: #6c757d;
     width: 30vw;
 }
 a {
@@ -42,4 +42,21 @@ navbar{
 }
 .modal-content{
     background-color: transparent;
+}
+.dropdown-menu{
+    background-color: #6c757d;
+    color: white;
+}
+.dropdown-menu:hover{
+    background-color: #545b62;
+    color: white;
+}
+.dropdown-item:focus, .dropdown-item{
+    background-color: #6c757d;
+    color: white;
+    font-size: 1.5em;
+}
+.dropdown-item:focus, .dropdown-item:hover{
+    background-color: #545b62;
+    color: white;
 }
