--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,28 +12,27 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark ">
-            {% if app.user.roles is defined %}
+            <div class="dropdown mt-3 ml-3">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <i class="fas fa-user-circle fa-2x"></i>
+                </a>
+                {% if app.user.roles is  not defined %}
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="{{ path('card_index')}}">Bibliothèque</a>
-                    <a class="nav-item nav-link" href="#"><i class="fas fa-boxes"></i> Decks</a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item dropmenu" href="/login">Connexion</a>
+                    <a class="" href="/register">Inscription</a>
                 </div>
-                {% if 'ROLE_ADMIN' in app.user.roles %}
-                    <a class="nav-item nav-link" href="{{ path('easyadmin')}}"><i class="fas fa-user-tie"></i> Admin</a>
                 {% else %}
-                    <a class="nav-item nav-link" href="#"><i class="fas fa-user-circle"></i> Profil</a>
-                {% endif %}
-                <a class="nav-item nav-link" href="/logout"><i class="fas fa-lock"></i></a>
-            </div>
-                {% else %}
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <a class="nav-item nav-link" href="/login"><i class="fas fa-user-circle"></i></a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    {% if 'ROLE_ADMIN' in app.user.roles %}
+                        <a class="dropdown-item dropmenu" href="{{ path('easyadmin')}}"><i class="fas fa-user-tie"></i> Admin</a>
+                    {% endif %}
+                    <a class="dropdown-item dropmenu" href="#"><i class="fas fa-user"></i> Mon Profil</a>
+                    <a class="dropdown-item dropmenu" href="{{ path('card_index')}}"><i class="fas fa-book"></i> Ma Bibliothèque</a>
+                    <a class="dropdown-item dropmenu" href="#"><i class="fas fa-boxes"></i> Mes Decks</a>
+                    <a class="dropdown-item dropmenu" href="#"><i class="fas fa-search"></i> Recherche avancée</a>
+                    <a class="dropdown-item dropmenu" href="/logout"> <i class="fas fa-lock"></i>Déconnexion</a>
+                </div>
             </div>
             {% endif %}
             {% block search %}{% endblock %}
