--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -15,7 +15,7 @@
         <div class="row">
             <form class="form-inline my-2 my-lg-0 col-12 justify-content-center">
                 <input class="form-control mr-sm-2 text-light" type="search" placeholder="Rechercher" aria-label="Search" name="search">
-                <button class="btn btn-dark my-2 my-sm-0 text-light" type="submit">Rechercher</button>
+                <button class="btn btn-secondary my-2 my-sm-0 text-light" type="submit">Rechercher</button>
             </form>
         </div>
     </div>
