--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -12,7 +12,7 @@
             <img class=" col-12 justify-content-center logoMg" src="/assets/images/mtglogo.png">
         </div>
 
-        <div class="row">
+        <div class="row index-page">
             <form class="form-inline my-2 my-lg-0 col-12 justify-content-center">
                 <input class="form-control mr-sm-2 text-light" type="search" placeholder="Rechercher" aria-label="Search" name="search">
                 <button class="btn btn-secondary my-2 my-sm-0 text-light" type="submit">Rechercher</button>
