--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,7 +22,7 @@
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item dropmenu" href="/login">Connexion</a>
-            <a class="" href="/register">Inscription</a>
+            <a class="dropdown-item dropmenu" href="/register">Inscription</a>
         </div>
         {% else %}
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
