--- a/templates/homepage/search.html.twig
+++ b/templates/homepage/search.html.twig
@@ -16,32 +16,7 @@
                    class="color-gray-darker td-hover-none">
                     <img class="ml-1 mb-1 mr-1 mt-1 .cardSmall" alt="{{ card.name }}" src="{{ card.image_uris.png }}">
                 </a>
-                <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="card{{ card.id }}"
-                     role="dialog"
-                     tabindex="-1">
-                    <div class="modal-dialog modal-lg ml-5" role="document">
-                        <div class="modal-content">
-                            <div class="row">
-                                <button class="btn btn-outline-link btn-rounded btn-md ml-4 text-right col-11"
-                                        data-dismiss="modal" type="button"><i
-                                            class="far fa-times-circle fa-2x text-secondary"></i>
-                                </button>
-                                <div class="offset-6"></div>
-                                <div class="col-6 justify-content-center">
-                                    {% if app.user.roles is defined %}
-                                        {% include('_addTo.html.twig') %}
-                                    {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="offset-8"></div>
-                                <div class="col-4 justify-content-right">
-                                    <img class="img" src="{{ card.image_uris.png }}" alt="{{ card.name }}">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include('_modal_search.html.twig') %}
             {% endif %}
 
         {% endfor %}
