--- a/templates/_modal_search.html.twig
+++ b/templates/_modal_search.html.twig
@@ -1,15 +1,10 @@
-<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="card{{ card.id }}"
+<div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade justify-content-center" id="card{{ card.id }}"
      role="dialog"
      tabindex="-1">
-    <div class="modal-dialog modal-lg ml-5" role="document">
+    <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="row">
-                <button class="btn btn-outline-link btn-rounded btn-md ml-4 text-right col-11"
-                        data-dismiss="modal" type="button"><i
-                            class="far fa-times-circle fa-2x text-secondary"></i>
-                </button>
-                <div class="offset-6"></div>
-                <div class="col-6 justify-content-center">
+            <div class="row justify-content-center">
+                <div class=" offset-md-6 col-6 mb-3">
                     {% if (app.user.roles is defined) %}
                         {% if ( "/searchpage/" in app.request.getPathInfo ) %}
                             {% include('_addTo.html.twig') %}
@@ -19,12 +14,9 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="row">
-                <div class="offset-8"></div>
-                <div class="col-4 justify-content-right">
+                <div class="col">
                     <img class="img" src="{{ card.image_uris.png }}" alt="{{ card.name }}">
                 </div>
             </div>
-        </div>
     </div>
 </div>
