--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,11 +33,13 @@
             <a class="dropdown-item dropmenu" href="#"><i class="fas fa-user"></i> Mon Profil</a>
             <a class="dropdown-item dropmenu" href="{{ path('card_index') }}"><i class="fas fa-book"></i> Ma
                 Bibliothèque</a>
-            <a class="dropdown-item dropmenu" href="#"><i class="fas fa-boxes"></i> Mes Decks</a>
+            <a class="dropdown-item dropmenu" href="/deck"><i class="fas fa-boxes"></i> Mes Decks</a>
             <a class="dropdown-item dropmenu" href="#"><i class="fas fa-search"></i> Recherche avancée</a>
             <a class="dropdown-item dropmenu" href="/logout"> <i class="fas fa-lock"></i> Déconnexion</a>
         </div>
     </div>
+    {% endif %}
+
     {% if app.request.getPathInfo != "/" %}
     <form class="form-inline justify-content-center">
         <input class="form-control mr-sm-2 text-light" type="search" placeholder="Rechercher" aria-label="Search"
@@ -46,7 +48,6 @@
     </form>
     {% endif %}
 </div>
-{% endif %}
 {% block search %}{% endblock %}
 </nav>
 <header>
@@ -58,8 +59,6 @@
         {% endfor %}
     {% endfor %}
 </header>
-
-
 {% block body %}{% endblock %}
 {% block javascripts %}{% endblock %}
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
