--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -24,7 +24,7 @@ h2 {
 #formContent {
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
-    background: #fff;
+    background: rgba(255,255,255,0.8);
     padding: 30px;
     width: 90%;
     max-width: 450px;
