--- a/templates/deck/show.html.twig
+++ b/templates/deck/show.html.twig
@@ -1,20 +1,54 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Deck{% endblock %}
 
 {% block body %}
-    <h1>Deck</h1>
+    <div class="row mt-4">
+        <div class="offset-1"></div>
+        <div class="col-2">
+            <div class="new">
+            <h3>Nouveau</h3>
+            {{ include('deck/_form.html.twig') }}
+            </div>
+            <h2>Vos Decks</h2>
 
-
-                <h2>{{ deck.name }}</h2>
-            {% for card in cards %}
-                <a href="#" data-target="#card{{ card.id }}" data-toggle="modal"
-                   class="color-gray-darker td-hover-none">
-                    <img class="ml-1 mb-1 mr-1 mt-1 .cardSmall" alt="{{ card.name }}" src="{{ card.image_uris.png }}">
-                </a>
+            {% for deck in decks %}
+                <div>
+                    <a href="{{ path('deck_show', {'id': deck.id}) }}" class="text-dark">{{ deck.name|capitalize }}</a>
+                    <a href="{{ path('deck_edit', {'id': deck.id}) }}"><i class="fas fa-pencil-alt text-dark"></i></a>
+                </div>
+            {% else %}
+                <p>Aucun deck pour le moment</p>
             {% endfor %}
+        </div>
+        <div class="col-7 deckshow">
+            <div class="container">
+                <h2>Deck : {{ deck.name|capitalize }}</h2>
+                {% for card in cards %}
+                    <div class="show-image">
+                        <a href="#" data-target="#card{{ card.id }}" data-toggle="modal"
+                           class="color-gray-darker td-hover-none">
+                            <img class="ml-1 mb-1 mr-1 mt-1 .cardSmall grey-card
+                        {% for gotcard in library %}
+                        {% if card.id == gotcard.cardId %}
+                        not-grey
+                        {% endif %}
+                    {% endfor %} " alt="{{ card.name }}" src="{{ card.image_uris.png }}">
+                            {% for gotcard in library %}
+                                {% if card.id != gotcard.cardId %}
+                                    <a href="{{ card.purchase_uris.cardmarket }}">
+                                        <button class="buy mbutton btn btn-bloc btn-success ">
+                                            <i class="fas fa-shopping-cart"></i> Acheter
+                                        </button>
+                                    </a>
+                                {% endif %}
+                            {% endfor %}
+                        </a>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+        <div class="offset-2"></div>
+    </div>
 
-    <a href="{{ path('deck_edit', {'id': deck.id}) }}">edit</a>
-
-    {{ include('deck/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
