--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'security/layout_security.html.twig' %}
 
 {% block stylesheets %}
     <link href="/assets/css/login.css" rel="stylesheet">
