--- a/templates/_modal_search_global.html.twig
+++ b/templates/_modal_search_global.html.twig
@@ -58,7 +58,16 @@
                         {% endif %}
                         </h4>
                     </div>
-                    <div class="dropdown deckdrop mt-3 ml-3 col-6">
+                    {% if (app.user.roles is defined) %}
+                        <div class="col-6 librarymodal mt-3">
+                    <a href="{{ path('add_card', {'idCard':card.id, 'search':search, 'next':next}) }}">
+                        <button class="library mbutton btn btn-bloc btn-success  ">
+                            <i class="fa fa-plus-circle"></i> Bibliothèque
+                        </button>
+                    </a>
+                        </div>
+                    {% endif %}
+                    <div class="dropdown deckdrop mt-3 col-6">
                         <a class="decks mbutton btn btn-secondary dropdown-toggle" href="#" role="button"
                            id="dropdownMenuLink"
                            data-toggle="dropdown"
@@ -67,8 +76,7 @@
                         </a>
                         <div class="dropdown-menu mbutton" aria-labelledby="dropdownMenuLink">
                             {% for deck in decks %}
-                                <a class="dropdown-item dropmenu deckmenu"
-                                   href="{{ path('add_to_deck_from_library', {'idCard':card.id, 'idDeck':deck.id}) }}">{{ deck.name }}</a>
+                                <a class="dropdown-item dropmenu deckmenu" href="{{ path('add_to_deck', {'idCard':card.id, 'search':search, 'next':next, 'idDeck':deck.id}) }}">{{ deck.name }}</a>
                             {% endfor %}
                         </div>
                     </div>
