--- a/templates/deck/_delete_form.html.twig
+++ b/templates/deck/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('deck_delete', {'id': deck.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('deck_delete', {'id': deck.id}) }}" onsubmit="return confirm('Etes vous sur de vouloir supprimer ce deck?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ deck.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn"><i class="fas fa-times text-danger"></i></button>
 </form>
