--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
             <a class="dropdown-item dropmenu" href="{{ path('card_index') }}"><i class="fas fa-book"></i> Ma
                 Bibliothèque</a>
             <a class="dropdown-item dropmenu" href="/deck"><i class="fas fa-boxes"></i> Mes Decks</a>
-            <a class="dropdown-item dropmenu" href="#"><i class="fas fa-search"></i> Recherche avancée</a>
+            <a class="dropdown-item dropmenu" href="/advancedsearchpage"><i class="fas fa-search"></i> Recherche avancée</a>
             <a class="dropdown-item dropmenu" href="/logout"> <i class="fas fa-lock"></i> Déconnexion</a>
         </div>
     </div>
