--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,28 +1,39 @@
 body{
-    background-image: url("/assets/images/backgrounds/magic.jpg");
+    background:linear-gradient(
+            rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)
+    ), url("https://cdn-images-1.medium.com/max/2600/1*_HhnCWCrqDSt__s5wFrKqQ.jpeg");
     object-fit: cover;
-    background-attachment: fixed;}
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-color: rgba(255,255,255,0.5);
+
+    font-family: 'Almendra SC', serif;
+    font-weight: 600;
+}
 
 img{
     max-height: 300px;
     object-fit: contain;
-    top: 20vh;
+    top: 25vh;
 }
 
 .img{
     max-height: 70vh !important;
 }
 
-form{
-    top: 20vh;
+.index-page{
+    top: 25vh;
 }
 
 .form-inline .form-control{
-    background-color: #343a40;
-    width: 45vw;
+    background-color: #6c757d;
+    opacity: 0.8;
+    width: 30vw;
+    display: inline;
 }
+
 a {
-    font-family: Rubik,"Helvetica Neue",Helvetica,Arial,sans-serif;    font-size: 1.7em;
+    font-size: 1.7em;
     color: #343a40;
     font-weight: 900;
 }
@@ -30,7 +41,7 @@ a {
 a:hover{
     color: #343a40;
 }
-navbar{
+.navbar{
     background-color: rgba(24, 34, 24, 0.5);
 }
 .g-ico{
@@ -39,4 +50,164 @@ navbar{
 }
 .nav-pagination,a{
     color: white;
+}
+.modal-content{
+    background-color: transparent;
+    border: none;
+    width: 55vw;
+    margin-top: 120px;
+    margin-left: -110px;
+    background-image:url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png") ;
+}
+.dropdown-menu{
+    background-color: #6c757d;
+    color: white;
+}
+.dropdown-menu:hover{
+    background-color: #545b62;
+    color: white;
+}
+.dropdown-item:focus, .dropdown-item{
+    background-color: #6c757d;
+    color: white;
+    font-size: 1.5em;
+}
+.dropdown-item:focus, .dropdown-item:hover{
+    background-color: #545b62;
+    color: white;
+}
+div.show-image {
+    position: relative;
+    float:left;
+    margin:5px;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+}
+div.show-image:hover img{
+    opacity:0.9;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    filter: none;
+
+}
+div.show-image:hover button {
+    display: block;
+}
+div.show-image button {
+    position:absolute;
+    display:none;
+}
+div.show-image:hover a.decks{
+    display: block;
+}
+div.show-image button.library {
+    top:20%;
+    left:20%;
+}
+div.show-image a.decks {
+    position:absolute;
+    display:none;
+    margin-top: -80%;
+    left:20%;
+    width: 109px;
+}
+div.show-image button.show {
+    top:80%;
+    left:32%;
+}
+.mbutton{
+    font-size: 16px;
+}
+.grey-card{
+    filter: grayscale(100%);
+    opacity: 0.9;
+}
+.not-grey{
+    filter: none;
+    opacity: 1;
+}
+div.show-image button.buy {
+    top:40%;
+    left:25%;
+}
+.fa-pencil-alt{
+    font-size: 16px;
+}
+.deckshow{
+    background-color: rgba(255, 255, 255, 0.45);
+    height:1700px;
+    border-radius: 15px;
+    max-width: 60vw;
+}
+.new{
+    background-color:rgba(255, 255, 255, 0.45) ;
+    border-radius: 10px;
+}
+.searchshow{
+    background-color: rgba(255, 255, 255, 0.45);
+    height:1700px;
+    border-radius: 15px;
+    max-width: 56vw;
+}
+
+.deckmenu{
+    font-size: 1em;
+}
+
+.nav-pagination{
+    color: #343a40;
+    font-size: 1.5em;
+}
+.nav-pagination a{
+    color: #343a40;
+    font-size: 1.5em;
+    font-weight: normal;
+}
+.oracle{
+    background-color: white;
+    border-radius: 25px;
+}
+.manaW{
+    background-color: #fffbd5;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png"),url("/assets/images/backgrounds/white.png");
+    background-repeat: repeat,no-repeat;
+    background-position: 80% 100%;
+}
+.manaC{
+    background-color:#c6bcba;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png"),url("/assets/images/backgrounds/c.png");
+    background-repeat: repeat,no-repeat;
+    background-position: 80% 100%;
+    }
+.manaR{
+    background-color:#f9aa8f;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png"),url("/assets/images/backgrounds/red.png");
+    background-repeat: repeat,no-repeat;
+    background-position: 80% 100%;
+    }
+.manaG{
+    background-color:#9bd3ae;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png"),url("/assets/images/backgrounds/green.png");
+    background-repeat: repeat,no-repeat;
+    background-position: 80% 100%;
+    }
+.manaU{
+    background-color: #aae0fa;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png"),url("/assets/images/backgrounds/blue.png");
+    background-repeat: repeat,no-repeat;
+    background-position: 80% 100%;
+    }
+.manaB{
+    background-color: #cbc2bf;
+    background-image: url("https://www.transparenttextures.com/patterns/45-degree-fabric-dark.png"),url("/assets/images/backgrounds/black.png");
+    background-repeat: repeat,no-repeat;
+    background-position: 80% 100%;
+}
+.deckdrop{
+    right:-80px;
+}
+.librarymodal{
+    left:-30px;
 }
