--- a/templates/card/index.html.twig
+++ b/templates/card/index.html.twig
@@ -1,17 +1,17 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Card index{% endblock %}
-
 {% block body %}
-    <h1>Card index</h1>
+    <div class="text-center mt-3">
+    <h1>Ma Bibliothèque</h1>
+    <h2>{{ cards|length }} cartes</h2>
+    </div>
 
-<div class="container mt-5 ">
+    <div class="container mt-5 pl-5 searchshow">
+        {% include('result/result.html.twig') %}
+    </div>
 
-        {% for card in cards %}
-                    <a href="{{ path('card_show', {'id': card.id}) }}"><img src="{{ card.image_uris.png }}"/></a>
-        {% else %}
-                <p>no records found</p>
-        {% endfor %}
-
-</div>
+    <div class="d-flex justify-content-center mt-5 nav-pagination text-dark">
+        {{ knp_pagination_render(cardsPages) }}
+    </div>
 {% endblock %}
